Use new threads API